--- a/apps/mastercrafter/src/app.html
+++ b/apps/mastercrafter/src/app.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="" data-typetheme="">
 	<head>
+		<robots meta="noindex, nofollow" />
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
